--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <div class="sosmed">
       <a href="https://wa.me/6285737312031" target="_blank">WhatsApp</a>
-      <a href="https://instagram.com/nama_ig" target="_blank">Instagram</a>
-      <a href="https://tiktok.com/@nama_tiktok" target="_blank">TikTok</a>
+      <a href="https://instagram.com/zermone._" target="_blank">Instagram</a>
+      <a href="https://tiktok.com/@pwgwds" target="_blank">TikTok</a>
     </div>
 
     <!-- Bagian Testimoni -->
