--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <div class="sosmed">
       <a href="https://wa.me/6285737312031" target="_blank">WhatsApp</a>
       <a href="https://instagram.com/nama_ig" target="_blank">Instagram</a>
-      <a href="https://tiktok.com/@nama_tiktok" target="_blank">TikTok</a>
-    </div>
-
+      <a href="https://discord.gg/itsmeverxs" class="sosmed-link">Discord</a>
 <div class="pricelist-section">
   <h2 style="text-align:center;">Pricelist</h2>
   <div class="pricelist-slider">
