--- a/index.html
+++ b/index.html
@@ -35,5 +35,10 @@
       <p>Rp20.000</p>
       <a href="https://wa.me/6285737312031?text=Halo%20saya%20mau%20order%20Setup%20Server%20Full" class="order-btn">Order Now</a>
     </div>
+    <div class="price-card">
+      <h3>Setup plugin server</h3>
+      <p>Rp5.000</p>
+      <a href="https://wa.me/6285737312031?text=Halo%20saya%20mau%20order%20Setup%20plugin" class="order-btn">Order Now</a>
+    </div>
   </div>
 </div>
